apps/htb/htb-ws/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: htb-ws
  namespace: htb
  labels:
    app: htb-ws
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: htb-ws
  type: ClusterIP
