apps/htb/htb-ws/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: htb-ws
  namespace: htb
spec:
  hostnames:
    - ws.htb.m15ty.com
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: htb-ws
          port: 80
