apps/htb/htb-ws/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htb-ws-ingress
  namespace: htb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: ws.htb.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: htb-ws
            port:
              number: 80
  tls:
    - hosts:
      - ws.htb.v34l.com
      secretName: htb-ws-secret
